# parchemin

./: pyproject.toml
docs/: resource-action-graph-report.md
src/parchemin/: graph.py  plan.py  step.py  target.py
tests/: test_plan_action_graph.py
