[project]
name = "parchemin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "loristns" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
required-version = ">=0.14.14"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "PIE",
    "SIM",
    "ARG",
    "RUF",
]
unfixable = ["F401", "F841"]
